Add 'knative.dev' to include/exclude labels
Workaround for an upstream knative issue that cause corruption within
the mutating webhook configuration for intercepting bound applications.

Refs #130

Signed-off-by: Scott Andrews <andrewssc@vmware.com>

--- a/config/100-namespace.yaml
+++ b/config/100-namespace.yaml
@@ -7,4 +7,4 @@ metadata:
   name: service-bindings
   labels:
     bindings.labs.vmware.com/release: devel
-    bindings.labs.vmware.com/exclude: "true"
+    knative.dev.bindings.labs.vmware.com/exclude: "true"
