--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -84,11 +84,7 @@ jobs:
         curl -Lo ./kind https://kind.sigs.k8s.io/dl/v0.10.0/kind-linux-amd64
         chmod +x ./kind
         sudo mv ./kind /usr/local/bin
-    - name: Install kapp
-      run: |
-        curl -Lo ./kapp https://github.com/vmware-tanzu/carvel-kapp/releases/download/v0.35.0/kapp-linux-amd64
-        chmod +x ./kapp
-        sudo mv ./kapp /usr/local/bin
+    - uses: vmware-tanzu/carvel-setup-action@v1
     - name: Create cluster
       run: kind create cluster --wait 5m --image kindest/node:v${{ matrix.k8s }}
     - name: Download staged Service Bindings build
