--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,3 +10,8 @@ updates:
   schedule:
     interval: daily
   open-pull-requests-limit: 10
+  ignore:
+  - dependency-name: k8s.io/*
+    update-types:
+    - version-update:semver-major
+    - version-update:semver-minor
