--- a/config/300-servicebindingprojection.yaml
+++ b/config/300-servicebindingprojection.yaml
@@ -50,10 +50,7 @@ spec:
                     type: string
                   containers:
                     items:
-                      anyOf:
-                      - type: integer
-                      - type: string
-                      x-kubernetes-int-or-string: true
+                      type: string
                     type: array
                   kind:
                     type: string
